// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`compatibility routes GET /posts/:id should return post by id 1`] = `
Object {
  "id": "p1",
  "image": null,
  "placeholder": null,
  "publishedAt": null,
  "ratio": null,
  "readTime": null,
  "tags": Array [
    "javascript",
    "webdev",
  ],
  "title": "P1",
  "url": "http://p1.com",
}
`;

exports[`compatibility routes POST /posts/:id/hide should hide the post 1`] = `
Array [
  HiddenPost {
    "postId": "p1",
    "userId": "1",
  },
]
`;

exports[`compatibility routes POST /posts/:id/report should report the post 1`] = `
Array [
  HiddenPost {
    "postId": "p1",
    "userId": "1",
  },
]
`;

exports[`mutation hidePost should hide the post 1`] = `
Array [
  HiddenPost {
    "postId": "p1",
    "userId": "1",
  },
]
`;

exports[`mutation hidePost should ignore conflicts 1`] = `
Array [
  HiddenPost {
    "postId": "p1",
    "userId": "1",
  },
]
`;

exports[`mutation reportPost should ignore conflicts 1`] = `
Array [
  HiddenPost {
    "postId": "p1",
    "userId": "1",
  },
]
`;

exports[`mutation reportPost should report post 1`] = `
Array [
  HiddenPost {
    "postId": "p1",
    "userId": "1",
  },
]
`;

exports[`query post should return post by id 1`] = `
Object {
  "post": Object {
    "id": "p1",
    "image": null,
    "placeholder": null,
    "ratio": null,
    "readTime": null,
    "source": Object {
      "id": "a",
      "image": "http://image.com/a",
      "name": "A",
      "public": true,
    },
    "tags": Array [
      "javascript",
      "webdev",
    ],
    "title": "P1",
    "url": "http://p1.com",
  },
}
`;

exports[`source field should return the private representation 1`] = `
Object {
  "post": Object {
    "source": Object {
      "id": "a",
      "image": "https://private.com/a",
      "name": "Private A",
      "public": false,
    },
  },
}
`;

exports[`source field should return the public representation 1`] = `
Object {
  "post": Object {
    "source": Object {
      "id": "a",
      "image": "http://image.com/a",
      "name": "A",
      "public": true,
    },
  },
}
`;
